# Coursework

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  solver.cpp
include/: equation.h  mainframe.h  solver.h
src/: equation.cpp  main.cpp  mainframe.cpp  solver.cpp
